# newrelic-sb-sdk-playground

./: .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  _config.yml  _toc.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: jupyter-book.yml
devops/python/: build_docs_with_jupyterbook.sh  build_package.sh  execute_tests.sh  publish_docs_to_gitlab_pages.sh  publish_package_to_pypi.sh  setup_dependencies.sh  setup_poetry.sh  setup_pypi_credentials.sh  setup_variables.sh  upload_coverage.sh
notebooks/: 01 - New Relic Playground - NRQL.ipynb  01 - Playground - NRQL.ipynb  02 - New Relic Playground - Dashboards.ipynb  02 - Playground - Dashboards.ipynb  03 - New Relic Playground - Alertas.ipynb  03 - Playground - Alertas.ipynb  04 - New Relic Playground - Niveles de servicio.ipynb  04 - Playground - Niveles de servicio.ipynb  05 - New Relic Playground - Drop Rules.ipynb  05 - Playground - Drop Rules.ipynb  06 - New Relic Playground - Fetch Data.ipynb  06 - Playground - Fetch Data.ipynb
