[tool.poetry]
name = "newrelic-playground"
version = "0.1.0"
description = ""
authors = ["martin.vuelta@gmail.com <martin.vuelta@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.16"
jupyterlab = "^3.6.2"
jupyter-book = "^0.15.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
sgqlc = "^16.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
newrelic-sb-sdk = "^0.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
bandit = "^1.7.4"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.0.1"
nbqa = {extras = ["toolchain"], version = "^1.6.3"}
pre-commit = "^3.1.0"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
types-pytz = "^2023.3.0.0"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
