[tool.poetry]
name = "newrelic-playground"
version = "0.1.0"
description = ""
authors = ["martin.vuelta@gmail.com <martin.vuelta@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8.1,<4.0.0"
jupyter-book = "^0.15.1"
jupyterlab = "^4.0.1"
matplotlib = "^3.7.1"
newrelic-sb-sdk = "^0.9.0"
pandas = "^2.0.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
bandit = "^1.7.5"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.3.0"
nbqa = {extras = ["toolchain"], version = "^1.7.0"}
pre-commit = "^3.3.2"
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
types-pytz = "^2023.3.0.0"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
