[tool.poetry]
name = "newrelic-sb-sdk-playground"
version = "0.1.0"
description = ""
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.0,<4.0.0"
jupyter-book = "^1.0.3"
jupyterlab = "^4.3.1"
matplotlib = "^3.9.2"
newrelic-sb-sdk = "^0.23.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pygments-graphql = "^1.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
bandit = "^1.7.10"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
isort = "^5.13.2"
mypy = "^1.13.0"
nbqa = {extras = ["toolchain"], version = "^1.9.1"}
pre-commit = "^4.0.1"
pycodestyle = "^2.12.1"
pydocstyle = "^6.3.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
types-pytz = "^2024.2.0.20241003"
types-requests = "^2.32.0.20241016"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
